[package]
name = "neutron-interface"
version = "0.1.0"
authors = ["Jordan Earls <earlz@earlz.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struct_deser = "0.1.1"
struct_deser-derive = "0.1.0"
neutron-star-constants = { path = "../neutronstar-constants" }
ring = "0.16.9"
num = "0.2.0"
num-derive = "0.3.0"
num-traits = "0.2"